@@ -6,16 +6,14 @@ GMIDI is a Java 21 toolkit for capturing MIDI performances that will evolve into
 
 - **Core MIDI services (`com.gmidi.midi`, `com.gmidi.recorder`)** – Pure Java classes that discover devices, manage recording sessions, and expose UI-agnostic hooks.
 - **Console front-end (`com.gmidi.cli`)** – A thin command line layer that formats prompts, resolves output paths, and delegates the actual recording to the core services.
-- 
 - **Desktop front-end (`com.gmidi.ui`)** – A JavaFX scene graph that lists MIDI inputs, renders an 88-key piano, and mirrors incoming notes while the shared session persists the MIDI file.
 - **Interaction abstraction** – `RecordingInteraction` defines the lifecycle callbacks and (optionally) receiver decoration that a UI must provide so the core session can remain oblivious to presentation concerns.
-
 
 ## Prerequisites
 
 - Java 21 or newer
 - Gradle 8.6+ (only required the first time to regenerate the wrapper JAR)
-- The build pulls JavaFX modules via the OpenJFX Gradle plugin when you run `./gradlew`
+- The build pulls JavaFX modules directly from Maven Central and selects the right native artifacts for your OS when you run `./gradlew`
 
 ## Bootstrapping the Gradle wrapper
 
@@ -37,11 +35,16 @@ Once the wrapper files exist, launch the CLI with:
 
 The program lists available MIDI input devices, helps you pick one, and records until you press Enter again. Recordings default to timestamped filenames such as `recording-20241231-235945.mid` in the current directory.
 
-If Gradle downloads are blocked entirely, you can run the application directly with the JDK:
+If Gradle downloads are blocked entirely, you can run the application directly with the JDK.
+Because the project is modular and depends on JavaFX, point both compilation and execution at
+the JavaFX SDK that ships with OpenJFX (the Gradle build downloads it into your user cache on
+first use):
 
 ```bash
-javac -d build/classes $(find app/src/main/java -name "*.java")
-java -cp build/classes com.gmidi.App
+PATH_TO_FX="$HOME/.gradle/caches/modules-2/files-2.1/org.openjfx" # adjust for your platform
+javac --module-path "$PATH_TO_FX" -d build/classes $(find app/src/main/java -name "*.java")
+java --module-path "build/classes:$PATH_TO_FX" --add-modules javafx.controls,javafx.graphics \
+  --enable-native-access=ALL-UNNAMED com.gmidi/com.gmidi.App
 ```
 
 ## Launching the graphical recorder
@@ -52,12 +55,20 @@ The JavaFX interface shows a scrolling keyboard and flashes keys as you play. Ru
 ./gradlew :app:run --args="--gui"
 ```
 
-or directly via the JDK:
+You can place `--gui` anywhere in the argument list—the launcher scans all arguments and opens the
+desktop experience when it finds the flag.
+
+Launch directly via the JDK (again pointing at the JavaFX SDK and enabling native access):
 
 ```bash
-javac -d build/classes $(find app/src/main/java -name "*.java")
-java -cp build/classes com.gmidi.App --gui
+PATH_TO_FX="$HOME/.gradle/caches/modules-2/files-2.1/org.openjfx"
+javac --module-path "$PATH_TO_FX" -d build/classes $(find app/src/main/java -name "*.java")
+java --module-path "build/classes:$PATH_TO_FX" --add-modules javafx.controls,javafx.graphics \
+  --enable-native-access=ALL-UNNAMED com.gmidi/com.gmidi.App --gui
 ```
+
+The Gradle tasks already pass `--enable-native-access=ALL-UNNAMED`, so the JavaFX runtime avoids
+the `sun.misc.Unsafe` warnings seen on newer JDKs.
 
 From the window you can:
 
@@ -80,8 +91,3 @@ If Gradle cannot download dependencies in your environment, run `gradle test` wi
 - Add richer transport controls (metronome, configurable count-in, punch in/out) on top of the existing interaction contract.
 - Provide velocity-aware colouring and sustain-pedal overlays on the keyboard visualiser.
 - Record and surface session metadata to feed future playback and visualization features.
-
-- Introduce a desktop-friendly interface that visualizes pressed keys while delegating recording to the shared services.
-- Expand `RecordingInteraction` implementations to support richer UX (count-in, metronome, visual cues).
-- Add persistence for session metadata to feed future playback and visualization features.
-
